--- a/deepdub_cli/metadata/aeneas_aligned_output.json
+++ b/deepdub_cli/metadata/aeneas_aligned_output.json
@@ -3,41 +3,61 @@
   {
    "begin": "0.000",
    "children": [],
-   "end": "1.680",
+   "end": "2.600",
    "id": "f000001",
    "language": "ur",
    "lines": [
-    "\u06a9\u06cc\u0627"
+    "\u0627\u0691\u06a9\u0648\u06ba"
    ]
   },
   {
-   "begin": "1.680",
+   "begin": "2.600",
    "children": [],
-   "end": "2.520",
+   "end": "3.200",
    "id": "f000002",
    "language": "ur",
    "lines": [
-    "\u0622\u067e"
+    "\u0645\u062c\u06be\u06d2"
    ]
   },
   {
-   "begin": "2.520",
+   "begin": "3.200",
    "children": [],
-   "end": "3.960",
+   "end": "3.520",
    "id": "f000003",
    "language": "ur",
    "lines": [
-    "\u0627\u0646\u0633\u0627\u0646"
+    "\u0628\u06be\u0648\u06a9"
    ]
   },
   {
-   "begin": "3.960",
+   "begin": "3.520",
    "children": [],
-   "end": "4.000",
+   "end": "3.920",
    "id": "f000004",
    "language": "ur",
    "lines": [
-    "\u06a9\u0648"
+    "\u062a\u06af\u06cc"
+   ]
+  },
+  {
+   "begin": "3.920",
+   "children": [],
+   "end": "4.760",
+   "id": "f000005",
+   "language": "ur",
+   "lines": [
+    "\u06c1\u0648\u0626\u06cc"
+   ]
+  },
+  {
+   "begin": "4.760",
+   "children": [],
+   "end": "4.800",
+   "id": "f000006",
+   "language": "ur",
+   "lines": [
+    "\u06c1\u06d2"
    ]
   }
  ]
