--- a/deepdub_cli/metadata/aeneas_aligned_output.json
+++ b/deepdub_cli/metadata/aeneas_aligned_output.json
@@ -3,38 +3,48 @@
   {
    "begin": "0.000",
    "children": [],
-   "end": "2.160",
+   "end": "0.720",
    "id": "f000001",
    "language": "ur",
    "lines": [
-    "\u0645\u06cc\u0631\u0627"
+    "\u0622\u067e"
    ]
   },
   {
-   "begin": "2.160",
+   "begin": "0.720",
    "children": [],
-   "end": "3.520",
+   "end": "1.400",
    "id": "f000002",
+   "language": "ur",
+   "lines": [
+    "\u06a9\u0627"
+   ]
+  },
+  {
+   "begin": "1.400",
+   "children": [],
+   "end": "2.240",
+   "id": "f000003",
    "language": "ur",
    "lines": [
     "\u0646\u0627\u0645"
    ]
   },
   {
-   "begin": "3.520",
+   "begin": "2.240",
    "children": [],
-   "end": "5.120",
-   "id": "f000003",
+   "end": "2.920",
+   "id": "f000004",
    "language": "ur",
    "lines": [
-    "\u0627\u062d\u0645\u062f"
+    "\u06a9\u06cc\u0627"
    ]
   },
   {
-   "begin": "5.120",
+   "begin": "2.920",
    "children": [],
-   "end": "5.160",
-   "id": "f000004",
+   "end": "2.960",
+   "id": "f000005",
    "language": "ur",
    "lines": [
     "\u06c1\u06d2"
