--- a/requirements_all_37_4.txt
+++ b/requirements_all_37_4.txt
@@ -51,13 +51,13 @@ jsonpointer==2.1
 kiwisolver==1.3.2
 kombu==4.6.11
 librosa==0.7.0
-llvmlite
+llvmlite==0.38.0
 lxml==4.6.3
 matplotlib==3.4.3
 moviepy==1.0.3
 multiprocess==0.70.12.2
-numba
-numpy
+numba==0.55.1
+numpy==1.21.5
 olefile==0.46
 opencv-contrib-python==4.5.3.56
 opencv-python==4.1.0.25
