--- a/deepdub_cli/metadata/aeneas_aligned_output.json
+++ b/deepdub_cli/metadata/aeneas_aligned_output.json
@@ -3,51 +3,1161 @@
   {
    "begin": "0.000",
    "children": [],
-   "end": "0.720",
+   "end": "0.520",
    "id": "f000001",
-   "language": "ur",
+   "language": "de",
    "lines": [
-    "\u0622\u067e"
+    "abend"
+   ]
+  },
+  {
+   "begin": "0.520",
+   "children": [],
+   "end": "0.720",
+   "id": "f000002",
+   "language": "de",
+   "lines": [
+    "stehen"
    ]
   },
   {
    "begin": "0.720",
    "children": [],
-   "end": "1.400",
-   "id": "f000002",
-   "language": "ur",
+   "end": "0.880",
+   "id": "f000003",
+   "language": "de",
    "lines": [
-    "\u06a9\u0627"
+    "wir"
+   ]
+  },
+  {
+   "begin": "0.880",
+   "children": [],
+   "end": "1.040",
+   "id": "f000004",
+   "language": "de",
+   "lines": [
+    "nicht"
+   ]
+  },
+  {
+   "begin": "1.040",
+   "children": [],
+   "end": "1.120",
+   "id": "f000005",
+   "language": "de",
+   "lines": [
+    "nur"
+   ]
+  },
+  {
+   "begin": "1.120",
+   "children": [],
+   "end": "1.400",
+   "id": "f000006",
+   "language": "de",
+   "lines": [
+    "am"
    ]
   },
   {
    "begin": "1.400",
    "children": [],
-   "end": "2.240",
-   "id": "f000003",
-   "language": "ur",
+   "end": "1.680",
+   "id": "f000007",
+   "language": "de",
    "lines": [
-    "\u0646\u0627\u0645"
+    "beginn"
+   ]
+  },
+  {
+   "begin": "1.680",
+   "children": [],
+   "end": "1.960",
+   "id": "f000008",
+   "language": "de",
+   "lines": [
+    "eines"
+   ]
+  },
+  {
+   "begin": "1.960",
+   "children": [],
+   "end": "2.240",
+   "id": "f000009",
+   "language": "de",
+   "lines": [
+    "neuen"
    ]
   },
   {
    "begin": "2.240",
    "children": [],
-   "end": "2.920",
-   "id": "f000004",
-   "language": "ur",
+   "end": "3.280",
+   "id": "f000010",
+   "language": "de",
    "lines": [
-    "\u06a9\u06cc\u0627"
+    "jahres"
    ]
   },
   {
-   "begin": "2.920",
+   "begin": "3.280",
    "children": [],
-   "end": "2.960",
-   "id": "f000005",
-   "language": "ur",
+   "end": "3.640",
+   "id": "f000011",
+   "language": "de",
    "lines": [
-    "\u06c1\u06d2"
+    "sondern"
+   ]
+  },
+  {
+   "begin": "3.640",
+   "children": [],
+   "end": "3.800",
+   "id": "f000012",
+   "language": "de",
+   "lines": [
+    "auch"
+   ]
+  },
+  {
+   "begin": "3.800",
+   "children": [],
+   "end": "4.160",
+   "id": "f000013",
+   "language": "de",
+   "lines": [
+    "eines"
+   ]
+  },
+  {
+   "begin": "4.160",
+   "children": [],
+   "end": "4.520",
+   "id": "f000014",
+   "language": "de",
+   "lines": [
+    "neuen"
+   ]
+  },
+  {
+   "begin": "4.520",
+   "children": [],
+   "end": "6.080",
+   "id": "f000015",
+   "language": "de",
+   "lines": [
+    "jahrzehnts"
+   ]
+  },
+  {
+   "begin": "6.080",
+   "children": [],
+   "end": "6.240",
+   "id": "f000016",
+   "language": "de",
+   "lines": [
+    "ich"
+   ]
+  },
+  {
+   "begin": "6.240",
+   "children": [],
+   "end": "6.480",
+   "id": "f000017",
+   "language": "de",
+   "lines": [
+    "bin"
+   ]
+  },
+  {
+   "begin": "6.480",
+   "children": [],
+   "end": "7.080",
+   "id": "f000018",
+   "language": "de",
+   "lines": [
+    "\u00fcberzeugt"
+   ]
+  },
+  {
+   "begin": "7.080",
+   "children": [],
+   "end": "7.720",
+   "id": "f000019",
+   "language": "de",
+   "lines": [
+    "wir"
+   ]
+  },
+  {
+   "begin": "7.720",
+   "children": [],
+   "end": "8.160",
+   "id": "f000020",
+   "language": "de",
+   "lines": [
+    "haben"
+   ]
+  },
+  {
+   "begin": "8.160",
+   "children": [],
+   "end": "8.560",
+   "id": "f000021",
+   "language": "de",
+   "lines": [
+    "gute"
+   ]
+  },
+  {
+   "begin": "8.560",
+   "children": [],
+   "end": "8.880",
+   "id": "f000022",
+   "language": "de",
+   "lines": [
+    "gr\u00fcnde"
+   ]
+  },
+  {
+   "begin": "8.880",
+   "children": [],
+   "end": "9.600",
+   "id": "f000023",
+   "language": "de",
+   "lines": [
+    "zuversichtlich"
+   ]
+  },
+  {
+   "begin": "9.600",
+   "children": [],
+   "end": "9.760",
+   "id": "f000024",
+   "language": "de",
+   "lines": [
+    "zu"
+   ]
+  },
+  {
+   "begin": "9.760",
+   "children": [],
+   "end": "10.720",
+   "id": "f000025",
+   "language": "de",
+   "lines": [
+    "sein"
+   ]
+  },
+  {
+   "begin": "10.720",
+   "children": [],
+   "end": "10.920",
+   "id": "f000026",
+   "language": "de",
+   "lines": [
+    "dass"
+   ]
+  },
+  {
+   "begin": "10.920",
+   "children": [],
+   "end": "11.160",
+   "id": "f000027",
+   "language": "de",
+   "lines": [
+    "die"
+   ]
+  },
+  {
+   "begin": "11.160",
+   "children": [],
+   "end": "11.160",
+   "id": "f000028",
+   "language": "de",
+   "lines": [
+    "in"
+   ]
+  },
+  {
+   "begin": "11.160",
+   "children": [],
+   "end": "11.600",
+   "id": "f000029",
+   "language": "de",
+   "lines": [
+    "wenigen"
+   ]
+  },
+  {
+   "begin": "11.600",
+   "children": [],
+   "end": "12.080",
+   "id": "f000030",
+   "language": "de",
+   "lines": [
+    "stunden"
+   ]
+  },
+  {
+   "begin": "12.080",
+   "children": [],
+   "end": "12.640",
+   "id": "f000031",
+   "language": "de",
+   "lines": [
+    "beginnenden"
+   ]
+  },
+  {
+   "begin": "12.640",
+   "children": [],
+   "end": "13.240",
+   "id": "f000032",
+   "language": "de",
+   "lines": [
+    "zwanziger"
+   ]
+  },
+  {
+   "begin": "13.240",
+   "children": [],
+   "end": "13.640",
+   "id": "f000033",
+   "language": "de",
+   "lines": [
+    "jahre"
+   ]
+  },
+  {
+   "begin": "13.640",
+   "children": [],
+   "end": "13.720",
+   "id": "f000034",
+   "language": "de",
+   "lines": [
+    "des"
+   ]
+  },
+  {
+   "begin": "13.720",
+   "children": [],
+   "end": "14.560",
+   "id": "f000035",
+   "language": "de",
+   "lines": [
+    "einundzwanzigsten"
+   ]
+  },
+  {
+   "begin": "14.560",
+   "children": [],
+   "end": "15.280",
+   "id": "f000036",
+   "language": "de",
+   "lines": [
+    "jahrhunderts"
+   ]
+  },
+  {
+   "begin": "15.280",
+   "children": [],
+   "end": "15.560",
+   "id": "f000037",
+   "language": "de",
+   "lines": [
+    "gute"
+   ]
+  },
+  {
+   "begin": "15.560",
+   "children": [],
+   "end": "16.000",
+   "id": "f000038",
+   "language": "de",
+   "lines": [
+    "jahre"
+   ]
+  },
+  {
+   "begin": "16.000",
+   "children": [],
+   "end": "16.200",
+   "id": "f000039",
+   "language": "de",
+   "lines": [
+    "werden"
+   ]
+  },
+  {
+   "begin": "16.200",
+   "children": [],
+   "end": "16.280",
+   "id": "f000040",
+   "language": "de",
+   "lines": [
+    "k\u00f6nnen"
+   ]
+  },
+  {
+   "begin": "16.280",
+   "children": [],
+   "end": "16.520",
+   "id": "f000041",
+   "language": "de",
+   "lines": [
+    "wenn"
+   ]
+  },
+  {
+   "begin": "16.520",
+   "children": [],
+   "end": "17.480",
+   "id": "f000042",
+   "language": "de",
+   "lines": [
+    "wir"
+   ]
+  },
+  {
+   "begin": "17.480",
+   "children": [],
+   "end": "18.080",
+   "id": "f000043",
+   "language": "de",
+   "lines": [
+    "unsere"
+   ]
+  },
+  {
+   "begin": "18.080",
+   "children": [],
+   "end": "18.560",
+   "id": "f000044",
+   "language": "de",
+   "lines": [
+    "st\u00e4rken"
+   ]
+  },
+  {
+   "begin": "18.560",
+   "children": [],
+   "end": "19.080",
+   "id": "f000045",
+   "language": "de",
+   "lines": [
+    "nutzen"
+   ]
+  },
+  {
+   "begin": "19.080",
+   "children": [],
+   "end": "19.480",
+   "id": "f000046",
+   "language": "de",
+   "lines": [
+    "wenn"
+   ]
+  },
+  {
+   "begin": "19.480",
+   "children": [],
+   "end": "19.840",
+   "id": "f000047",
+   "language": "de",
+   "lines": [
+    "wir"
+   ]
+  },
+  {
+   "begin": "19.840",
+   "children": [],
+   "end": "20.360",
+   "id": "f000048",
+   "language": "de",
+   "lines": [
+    "oft"
+   ]
+  },
+  {
+   "begin": "20.360",
+   "children": [],
+   "end": "20.600",
+   "id": "f000049",
+   "language": "de",
+   "lines": [
+    "das"
+   ]
+  },
+  {
+   "begin": "20.600",
+   "children": [],
+   "end": "20.960",
+   "id": "f000050",
+   "language": "de",
+   "lines": [
+    "setzen"
+   ]
+  },
+  {
+   "begin": "20.960",
+   "children": [],
+   "end": "21.280",
+   "id": "f000051",
+   "language": "de",
+   "lines": [
+    "was"
+   ]
+  },
+  {
+   "begin": "21.280",
+   "children": [],
+   "end": "21.360",
+   "id": "f000052",
+   "language": "de",
+   "lines": [
+    "uns"
+   ]
+  },
+  {
+   "begin": "21.360",
+   "children": [],
+   "end": "21.560",
+   "id": "f000053",
+   "language": "de",
+   "lines": [
+    "verbindet"
+   ]
+  },
+  {
+   "begin": "21.560",
+   "children": [],
+   "end": "22.720",
+   "id": "f000054",
+   "language": "de",
+   "lines": [
+    "wenn"
+   ]
+  },
+  {
+   "begin": "22.720",
+   "children": [],
+   "end": "22.920",
+   "id": "f000055",
+   "language": "de",
+   "lines": [
+    "wir"
+   ]
+  },
+  {
+   "begin": "22.920",
+   "children": [],
+   "end": "23.240",
+   "id": "f000056",
+   "language": "de",
+   "lines": [
+    "uns"
+   ]
+  },
+  {
+   "begin": "23.240",
+   "children": [],
+   "end": "23.760",
+   "id": "f000057",
+   "language": "de",
+   "lines": [
+    "daran"
+   ]
+  },
+  {
+   "begin": "23.760",
+   "children": [],
+   "end": "24.080",
+   "id": "f000058",
+   "language": "de",
+   "lines": [
+    "erinnern"
+   ]
+  },
+  {
+   "begin": "24.080",
+   "children": [],
+   "end": "24.280",
+   "id": "f000059",
+   "language": "de",
+   "lines": [
+    "was"
+   ]
+  },
+  {
+   "begin": "24.280",
+   "children": [],
+   "end": "24.280",
+   "id": "f000060",
+   "language": "de",
+   "lines": [
+    "wir"
+   ]
+  },
+  {
+   "begin": "24.280",
+   "children": [],
+   "end": "24.280",
+   "id": "f000061",
+   "language": "de",
+   "lines": [
+    "in"
+   ]
+  },
+  {
+   "begin": "24.280",
+   "children": [],
+   "end": "24.680",
+   "id": "f000062",
+   "language": "de",
+   "lines": [
+    "den"
+   ]
+  },
+  {
+   "begin": "24.680",
+   "children": [],
+   "end": "25.080",
+   "id": "f000063",
+   "language": "de",
+   "lines": [
+    "letzten"
+   ]
+  },
+  {
+   "begin": "25.080",
+   "children": [],
+   "end": "25.800",
+   "id": "f000064",
+   "language": "de",
+   "lines": [
+    "jahrzehnten"
+   ]
+  },
+  {
+   "begin": "25.800",
+   "children": [],
+   "end": "26.480",
+   "id": "f000065",
+   "language": "de",
+   "lines": [
+    "gemeinsam"
+   ]
+  },
+  {
+   "begin": "26.480",
+   "children": [],
+   "end": "26.880",
+   "id": "f000066",
+   "language": "de",
+   "lines": [
+    "erreicht"
+   ]
+  },
+  {
+   "begin": "26.880",
+   "children": [],
+   "end": "28.560",
+   "id": "f000067",
+   "language": "de",
+   "lines": [
+    "habenim"
+   ]
+  },
+  {
+   "begin": "28.560",
+   "children": [],
+   "end": "29.000",
+   "id": "f000068",
+   "language": "de",
+   "lines": [
+    "n\u00e4chsten"
+   ]
+  },
+  {
+   "begin": "29.000",
+   "children": [],
+   "end": "29.440",
+   "id": "f000069",
+   "language": "de",
+   "lines": [
+    "jahr"
+   ]
+  },
+  {
+   "begin": "29.440",
+   "children": [],
+   "end": "29.440",
+   "id": "f000070",
+   "language": "de",
+   "lines": [
+    "wird"
+   ]
+  },
+  {
+   "begin": "29.440",
+   "children": [],
+   "end": "29.960",
+   "id": "f000071",
+   "language": "de",
+   "lines": [
+    "deutschland"
+   ]
+  },
+  {
+   "begin": "29.960",
+   "children": [],
+   "end": "30.160",
+   "id": "f000072",
+   "language": "de",
+   "lines": [
+    "seit"
+   ]
+  },
+  {
+   "begin": "30.160",
+   "children": [],
+   "end": "30.640",
+   "id": "f000073",
+   "language": "de",
+   "lines": [
+    "dreissig"
+   ]
+  },
+  {
+   "begin": "30.640",
+   "children": [],
+   "end": "31.120",
+   "id": "f000074",
+   "language": "de",
+   "lines": [
+    "jahren"
+   ]
+  },
+  {
+   "begin": "31.120",
+   "children": [],
+   "end": "31.280",
+   "id": "f000075",
+   "language": "de",
+   "lines": [
+    "in"
+   ]
+  },
+  {
+   "begin": "31.280",
+   "children": [],
+   "end": "31.600",
+   "id": "f000076",
+   "language": "de",
+   "lines": [
+    "frieden"
+   ]
+  },
+  {
+   "begin": "31.600",
+   "children": [],
+   "end": "31.960",
+   "id": "f000077",
+   "language": "de",
+   "lines": [
+    "und"
+   ]
+  },
+  {
+   "begin": "31.960",
+   "children": [],
+   "end": "32.560",
+   "id": "f000078",
+   "language": "de",
+   "lines": [
+    "freiheit"
+   ]
+  },
+  {
+   "begin": "32.560",
+   "children": [],
+   "end": "33.120",
+   "id": "f000079",
+   "language": "de",
+   "lines": [
+    "wiedervereint"
+   ]
+  },
+  {
+   "begin": "33.120",
+   "children": [],
+   "end": "34.400",
+   "id": "f000080",
+   "language": "de",
+   "lines": [
+    "sein"
+   ]
+  },
+  {
+   "begin": "34.400",
+   "children": [],
+   "end": "34.480",
+   "id": "f000081",
+   "language": "de",
+   "lines": [
+    "in"
+   ]
+  },
+  {
+   "begin": "34.480",
+   "children": [],
+   "end": "34.720",
+   "id": "f000082",
+   "language": "de",
+   "lines": [
+    "diesen"
+   ]
+  },
+  {
+   "begin": "34.720",
+   "children": [],
+   "end": "35.120",
+   "id": "f000083",
+   "language": "de",
+   "lines": [
+    "dreissig"
+   ]
+  },
+  {
+   "begin": "35.120",
+   "children": [],
+   "end": "35.440",
+   "id": "f000084",
+   "language": "de",
+   "lines": [
+    "jahren"
+   ]
+  },
+  {
+   "begin": "35.440",
+   "children": [],
+   "end": "35.800",
+   "id": "f000085",
+   "language": "de",
+   "lines": [
+    "haben"
+   ]
+  },
+  {
+   "begin": "35.800",
+   "children": [],
+   "end": "35.920",
+   "id": "f000086",
+   "language": "de",
+   "lines": [
+    "wir"
+   ]
+  },
+  {
+   "begin": "35.920",
+   "children": [],
+   "end": "36.640",
+   "id": "f000087",
+   "language": "de",
+   "lines": [
+    "grossartiges"
+   ]
+  },
+  {
+   "begin": "36.640",
+   "children": [],
+   "end": "37.960",
+   "id": "f000088",
+   "language": "de",
+   "lines": [
+    "geschafft"
+   ]
+  },
+  {
+   "begin": "37.960",
+   "children": [],
+   "end": "38.240",
+   "id": "f000089",
+   "language": "de",
+   "lines": [
+    "so"
+   ]
+  },
+  {
+   "begin": "38.240",
+   "children": [],
+   "end": "38.360",
+   "id": "f000090",
+   "language": "de",
+   "lines": [
+    "hatten"
+   ]
+  },
+  {
+   "begin": "38.360",
+   "children": [],
+   "end": "38.520",
+   "id": "f000091",
+   "language": "de",
+   "lines": [
+    "zum"
+   ]
+  },
+  {
+   "begin": "38.520",
+   "children": [],
+   "end": "38.840",
+   "id": "f000092",
+   "language": "de",
+   "lines": [
+    "beispiel"
+   ]
+  },
+  {
+   "begin": "38.840",
+   "children": [],
+   "end": "39.120",
+   "id": "f000093",
+   "language": "de",
+   "lines": [
+    "noch"
+   ]
+  },
+  {
+   "begin": "39.120",
+   "children": [],
+   "end": "39.320",
+   "id": "f000094",
+   "language": "de",
+   "lines": [
+    "nie"
+   ]
+  },
+  {
+   "begin": "39.320",
+   "children": [],
+   "end": "39.560",
+   "id": "f000095",
+   "language": "de",
+   "lines": [
+    "so"
+   ]
+  },
+  {
+   "begin": "39.560",
+   "children": [],
+   "end": "39.840",
+   "id": "f000096",
+   "language": "de",
+   "lines": [
+    "viele"
+   ]
+  },
+  {
+   "begin": "39.840",
+   "children": [],
+   "end": "40.600",
+   "id": "f000097",
+   "language": "de",
+   "lines": [
+    "menschenarbeit"
+   ]
+  },
+  {
+   "begin": "40.600",
+   "children": [],
+   "end": "40.800",
+   "id": "f000098",
+   "language": "de",
+   "lines": [
+    "wie"
+   ]
+  },
+  {
+   "begin": "40.800",
+   "children": [],
+   "end": "41.240",
+   "id": "f000099",
+   "language": "de",
+   "lines": [
+    "heute"
+   ]
+  },
+  {
+   "begin": "41.240",
+   "children": [],
+   "end": "42.680",
+   "id": "f000100",
+   "language": "de",
+   "lines": [
+    "dennoch"
+   ]
+  },
+  {
+   "begin": "42.680",
+   "children": [],
+   "end": "43.000",
+   "id": "f000101",
+   "language": "de",
+   "lines": [
+    "bleibt"
+   ]
+  },
+  {
+   "begin": "43.000",
+   "children": [],
+   "end": "43.560",
+   "id": "f000102",
+   "language": "de",
+   "lines": [
+    "auch"
+   ]
+  },
+  {
+   "begin": "43.560",
+   "children": [],
+   "end": "43.560",
+   "id": "f000103",
+   "language": "de",
+   "lines": [
+    "im"
+   ]
+  },
+  {
+   "begin": "43.560",
+   "children": [],
+   "end": "43.560",
+   "id": "f000104",
+   "language": "de",
+   "lines": [
+    "n\u00e4chsten"
+   ]
+  },
+  {
+   "begin": "43.560",
+   "children": [],
+   "end": "44.200",
+   "id": "f000105",
+   "language": "de",
+   "lines": [
+    "jahrzehnten"
+   ]
+  },
+  {
+   "begin": "44.200",
+   "children": [],
+   "end": "44.440",
+   "id": "f000106",
+   "language": "de",
+   "lines": [
+    "noch"
+   ]
+  },
+  {
+   "begin": "44.440",
+   "children": [],
+   "end": "44.800",
+   "id": "f000107",
+   "language": "de",
+   "lines": [
+    "mehr"
+   ]
+  },
+  {
+   "begin": "44.800",
+   "children": [],
+   "end": "45.000",
+   "id": "f000108",
+   "language": "de",
+   "lines": [
+    "zu"
+   ]
+  },
+  {
+   "begin": "45.000",
+   "children": [],
+   "end": "45.880",
+   "id": "f000109",
+   "language": "de",
+   "lines": [
+    "tun"
+   ]
+  },
+  {
+   "begin": "45.880",
+   "children": [],
+   "end": "46.200",
+   "id": "f000110",
+   "language": "de",
+   "lines": [
+    "als"
+   ]
+  },
+  {
+   "begin": "46.200",
+   "children": [],
+   "end": "46.200",
+   "id": "f000111",
+   "language": "de",
+   "lines": [
+    "wir"
+   ]
+  },
+  {
+   "begin": "46.200",
+   "children": [],
+   "end": "46.360",
+   "id": "f000112",
+   "language": "de",
+   "lines": [
+    "vor"
+   ]
+  },
+  {
+   "begin": "46.360",
+   "children": [],
+   "end": "46.840",
+   "id": "f000113",
+   "language": "de",
+   "lines": [
+    "dreissig"
+   ]
+  },
+  {
+   "begin": "46.840",
+   "children": [],
+   "end": "47.280",
+   "id": "f000114",
+   "language": "de",
+   "lines": [
+    "jahren"
+   ]
+  },
+  {
+   "begin": "47.280",
+   "children": [],
+   "end": "47.560",
+   "id": "f000115",
+   "language": "de",
+   "lines": [
+    "gedacht"
+   ]
+  },
+  {
+   "begin": "47.560",
+   "children": [],
+   "end": "48.720",
+   "id": "f000116",
+   "language": "de",
+   "lines": [
+    "aben"
    ]
   }
  ]
