Feat: Added video encoding to MP4

--- a/deepdub_cli/metadata/aeneas_aligned_output.json
+++ b/deepdub_cli/metadata/aeneas_aligned_output.json
@@ -3,61 +3,1231 @@
   {
    "begin": "0.000",
    "children": [],
-   "end": "3.040",
+   "end": "0.200",
    "id": "f000001",
    "language": "zh",
    "lines": [
-    "\u73b0\u573a\u7684\u5404\u4f4d\u670b\u53cb\u5927\u5bb6\u597d\u6b22\u8fce"
+    "\u73b0"
+   ]
+  },
+  {
+   "begin": "0.200",
+   "children": [],
+   "end": "0.520",
+   "id": "f000002",
+   "language": "zh",
+   "lines": [
+    "\u573a"
+   ]
+  },
+  {
+   "begin": "0.520",
+   "children": [],
+   "end": "0.720",
+   "id": "f000003",
+   "language": "zh",
+   "lines": [
+    "\u7684"
+   ]
+  },
+  {
+   "begin": "0.720",
+   "children": [],
+   "end": "0.840",
+   "id": "f000004",
+   "language": "zh",
+   "lines": [
+    "\u5404"
+   ]
+  },
+  {
+   "begin": "0.840",
+   "children": [],
+   "end": "1.080",
+   "id": "f000005",
+   "language": "zh",
+   "lines": [
+    "\u4f4d"
+   ]
+  },
+  {
+   "begin": "1.080",
+   "children": [],
+   "end": "1.280",
+   "id": "f000006",
+   "language": "zh",
+   "lines": [
+    "\u670b"
+   ]
+  },
+  {
+   "begin": "1.280",
+   "children": [],
+   "end": "1.440",
+   "id": "f000007",
+   "language": "zh",
+   "lines": [
+    "\u53cb"
+   ]
+  },
+  {
+   "begin": "1.440",
+   "children": [],
+   "end": "1.440",
+   "id": "f000008",
+   "language": "zh",
+   "lines": [
+    "\uff1a"
+   ]
+  },
+  {
+   "begin": "1.440",
+   "children": [],
+   "end": "2.040",
+   "id": "f000009",
+   "language": "zh",
+   "lines": [
+    "\u5927"
+   ]
+  },
+  {
+   "begin": "2.040",
+   "children": [],
+   "end": "2.320",
+   "id": "f000010",
+   "language": "zh",
+   "lines": [
+    "\u5bb6"
+   ]
+  },
+  {
+   "begin": "2.320",
+   "children": [],
+   "end": "2.560",
+   "id": "f000011",
+   "language": "zh",
+   "lines": [
+    "\u597d"
+   ]
+  },
+  {
+   "begin": "2.560",
+   "children": [],
+   "end": "2.920",
+   "id": "f000012",
+   "language": "zh",
+   "lines": [
+    "\uff01"
+   ]
+  },
+  {
+   "begin": "2.920",
+   "children": [],
+   "end": "3.000",
+   "id": "f000013",
+   "language": "zh",
+   "lines": [
+    "\u6b22"
+   ]
+  },
+  {
+   "begin": "3.000",
+   "children": [],
+   "end": "3.040",
+   "id": "f000014",
+   "language": "zh",
+   "lines": [
+    "\u8fce"
    ]
   },
   {
    "begin": "3.040",
    "children": [],
-   "end": "4.720",
-   "id": "f000002",
+   "end": "3.320",
+   "id": "f000015",
    "language": "zh",
    "lines": [
-    "\u6765\u5230\u65b0\u534e\u793e"
+    "\u6765"
    ]
   },
   {
-   "begin": "4.720",
+   "begin": "3.320",
    "children": [],
-   "end": "12.040",
-   "id": "f000003",
+   "end": "3.600",
+   "id": "f000016",
    "language": "zh",
    "lines": [
-    "\u6211\u662f\u7531\u65b0\u534e\u793e\u548c\u641c\u72d7\u516c\u53f8\u8054\u5408\u57f9\u80b2\u7684\u5168\u7403\u9996\u4e2a\u9ed1\u7231\u548c\u6210\u5973\u4e3b\u64ad\u6c83\u7684\u540d\u5b57\u8f83\u65b0\u5c0f\u5fd9"
+    "\u5230"
    ]
   },
   {
-   "begin": "12.040",
+   "begin": "3.600",
+   "children": [],
+   "end": "3.800",
+   "id": "f000017",
+   "language": "zh",
+   "lines": [
+    "\u65b0"
+   ]
+  },
+  {
+   "begin": "3.800",
+   "children": [],
+   "end": "4.000",
+   "id": "f000018",
+   "language": "zh",
+   "lines": [
+    "\u534e"
+   ]
+  },
+  {
+   "begin": "4.000",
+   "children": [],
+   "end": "4.280",
+   "id": "f000019",
+   "language": "zh",
+   "lines": [
+    "\u793e"
+   ]
+  },
+  {
+   "begin": "4.280",
+   "children": [],
+   "end": "4.800",
+   "id": "f000020",
+   "language": "zh",
+   "lines": [
+    "\uff0c"
+   ]
+  },
+  {
+   "begin": "4.800",
+   "children": [],
+   "end": "4.960",
+   "id": "f000021",
+   "language": "zh",
+   "lines": [
+    "\u662f"
+   ]
+  },
+  {
+   "begin": "4.960",
+   "children": [],
+   "end": "5.160",
+   "id": "f000022",
+   "language": "zh",
+   "lines": [
+    "\u7531"
+   ]
+  },
+  {
+   "begin": "5.160",
+   "children": [],
+   "end": "5.320",
+   "id": "f000023",
+   "language": "zh",
+   "lines": [
+    "\u65b0"
+   ]
+  },
+  {
+   "begin": "5.320",
+   "children": [],
+   "end": "5.520",
+   "id": "f000024",
+   "language": "zh",
+   "lines": [
+    "\u534e"
+   ]
+  },
+  {
+   "begin": "5.520",
+   "children": [],
+   "end": "5.760",
+   "id": "f000025",
+   "language": "zh",
+   "lines": [
+    "\u793e"
+   ]
+  },
+  {
+   "begin": "5.760",
+   "children": [],
+   "end": "6.000",
+   "id": "f000026",
+   "language": "zh",
+   "lines": [
+    "\u548c"
+   ]
+  },
+  {
+   "begin": "6.000",
+   "children": [],
+   "end": "6.120",
+   "id": "f000027",
+   "language": "zh",
+   "lines": [
+    "\u641c"
+   ]
+  },
+  {
+   "begin": "6.120",
+   "children": [],
+   "end": "6.280",
+   "id": "f000028",
+   "language": "zh",
+   "lines": [
+    "\u72d7"
+   ]
+  },
+  {
+   "begin": "6.280",
+   "children": [],
+   "end": "6.480",
+   "id": "f000029",
+   "language": "zh",
+   "lines": [
+    "\u516c"
+   ]
+  },
+  {
+   "begin": "6.480",
+   "children": [],
+   "end": "6.880",
+   "id": "f000030",
+   "language": "zh",
+   "lines": [
+    "\u53f8"
+   ]
+  },
+  {
+   "begin": "6.880",
+   "children": [],
+   "end": "7.040",
+   "id": "f000031",
+   "language": "zh",
+   "lines": [
+    "\u8054"
+   ]
+  },
+  {
+   "begin": "7.040",
+   "children": [],
+   "end": "7.200",
+   "id": "f000032",
+   "language": "zh",
+   "lines": [
+    "\u5408"
+   ]
+  },
+  {
+   "begin": "7.200",
+   "children": [],
+   "end": "7.440",
+   "id": "f000033",
+   "language": "zh",
+   "lines": [
+    "\u57f9"
+   ]
+  },
+  {
+   "begin": "7.440",
+   "children": [],
+   "end": "7.600",
+   "id": "f000034",
+   "language": "zh",
+   "lines": [
+    "\u80b2"
+   ]
+  },
+  {
+   "begin": "7.600",
+   "children": [],
+   "end": "7.640",
+   "id": "f000035",
+   "language": "zh",
+   "lines": [
+    "\u7684"
+   ]
+  },
+  {
+   "begin": "7.640",
+   "children": [],
+   "end": "7.800",
+   "id": "f000036",
+   "language": "zh",
+   "lines": [
+    "\u5168"
+   ]
+  },
+  {
+   "begin": "7.800",
+   "children": [],
+   "end": "8.000",
+   "id": "f000037",
+   "language": "zh",
+   "lines": [
+    "\u7403"
+   ]
+  },
+  {
+   "begin": "8.000",
+   "children": [],
+   "end": "8.400",
+   "id": "f000038",
+   "language": "zh",
+   "lines": [
+    "\u9996"
+   ]
+  },
+  {
+   "begin": "8.400",
+   "children": [],
+   "end": "8.400",
+   "id": "f000039",
+   "language": "zh",
+   "lines": [
+    "\u4e2a"
+   ]
+  },
+  {
+   "begin": "8.400",
+   "children": [],
+   "end": "8.600",
+   "id": "f000040",
+   "language": "zh",
+   "lines": [
+    "\u9ed1"
+   ]
+  },
+  {
+   "begin": "8.600",
+   "children": [],
+   "end": "8.920",
+   "id": "f000041",
+   "language": "zh",
+   "lines": [
+    "\u7231"
+   ]
+  },
+  {
+   "begin": "8.920",
+   "children": [],
+   "end": "9.240",
+   "id": "f000042",
+   "language": "zh",
+   "lines": [
+    "\u548c"
+   ]
+  },
+  {
+   "begin": "9.240",
+   "children": [],
+   "end": "9.240",
+   "id": "f000043",
+   "language": "zh",
+   "lines": [
+    "\u6210"
+   ]
+  },
+  {
+   "begin": "9.240",
+   "children": [],
+   "end": "9.240",
+   "id": "f000044",
+   "language": "zh",
+   "lines": [
+    "\u5973"
+   ]
+  },
+  {
+   "begin": "9.240",
+   "children": [],
+   "end": "9.400",
+   "id": "f000045",
+   "language": "zh",
+   "lines": [
+    "\u4e3b"
+   ]
+  },
+  {
+   "begin": "9.400",
+   "children": [],
+   "end": "9.400",
+   "id": "f000046",
+   "language": "zh",
+   "lines": [
+    "\u64ad"
+   ]
+  },
+  {
+   "begin": "9.400",
+   "children": [],
+   "end": "9.480",
+   "id": "f000047",
+   "language": "zh",
+   "lines": [
+    "\u3002"
+   ]
+  },
+  {
+   "begin": "9.480",
+   "children": [],
+   "end": "9.680",
+   "id": "f000048",
+   "language": "zh",
+   "lines": [
+    "\u6c83"
+   ]
+  },
+  {
+   "begin": "9.680",
+   "children": [],
+   "end": "10.240",
+   "id": "f000049",
+   "language": "zh",
+   "lines": [
+    "\u7684"
+   ]
+  },
+  {
+   "begin": "10.240",
+   "children": [],
+   "end": "10.560",
+   "id": "f000050",
+   "language": "zh",
+   "lines": [
+    "\u540d"
+   ]
+  },
+  {
+   "begin": "10.560",
+   "children": [],
+   "end": "10.760",
+   "id": "f000051",
+   "language": "zh",
+   "lines": [
+    "\u5b57"
+   ]
+  },
+  {
+   "begin": "10.760",
+   "children": [],
+   "end": "10.760",
+   "id": "f000052",
+   "language": "zh",
+   "lines": [
+    "\uff0c"
+   ]
+  },
+  {
+   "begin": "10.760",
+   "children": [],
+   "end": "10.960",
+   "id": "f000053",
+   "language": "zh",
+   "lines": [
+    "\u8f83"
+   ]
+  },
+  {
+   "begin": "10.960",
+   "children": [],
+   "end": "11.080",
+   "id": "f000054",
+   "language": "zh",
+   "lines": [
+    "\u65b0"
+   ]
+  },
+  {
+   "begin": "11.080",
+   "children": [],
+   "end": "11.160",
+   "id": "f000055",
+   "language": "zh",
+   "lines": [
+    "\uff0c"
+   ]
+  },
+  {
+   "begin": "11.160",
+   "children": [],
+   "end": "11.320",
+   "id": "f000056",
+   "language": "zh",
+   "lines": [
+    "\u5c0f"
+   ]
+  },
+  {
+   "begin": "11.320",
+   "children": [],
+   "end": "11.320",
+   "id": "f000057",
+   "language": "zh",
+   "lines": [
+    "\uff0c"
+   ]
+  },
+  {
+   "begin": "11.320",
+   "children": [],
+   "end": "11.560",
+   "id": "f000058",
+   "language": "zh",
+   "lines": [
+    "\u5fd9"
+   ]
+  },
+  {
+   "begin": "11.560",
+   "children": [],
+   "end": "11.600",
+   "id": "f000059",
+   "language": "zh",
+   "lines": [
+    "\u5367"
+   ]
+  },
+  {
+   "begin": "11.600",
+   "children": [],
+   "end": "12.240",
+   "id": "f000060",
+   "language": "zh",
+   "lines": [
+    "\u7684"
+   ]
+  },
+  {
+   "begin": "12.240",
+   "children": [],
+   "end": "12.440",
+   "id": "f000061",
+   "language": "zh",
+   "lines": [
+    "\u58f0"
+   ]
+  },
+  {
+   "begin": "12.440",
+   "children": [],
+   "end": "12.600",
+   "id": "f000062",
+   "language": "zh",
+   "lines": [
+    "\u97f3"
+   ]
+  },
+  {
+   "begin": "12.600",
+   "children": [],
+   "end": "12.720",
+   "id": "f000063",
+   "language": "zh",
+   "lines": [
+    "\u548c"
+   ]
+  },
+  {
+   "begin": "12.720",
+   "children": [],
+   "end": "12.880",
+   "id": "f000064",
+   "language": "zh",
+   "lines": [
+    "\u5916"
+   ]
+  },
+  {
+   "begin": "12.880",
+   "children": [],
+   "end": "13.240",
+   "id": "f000065",
+   "language": "zh",
+   "lines": [
+    "\u884c"
+   ]
+  },
+  {
+   "begin": "13.240",
+   "children": [],
+   "end": "13.240",
+   "id": "f000066",
+   "language": "zh",
+   "lines": [
+    "\uff0c"
+   ]
+  },
+  {
+   "begin": "13.240",
+   "children": [],
+   "end": "13.240",
+   "id": "f000067",
+   "language": "zh",
+   "lines": [
+    "\u8feb"
+   ]
+  },
+  {
+   "begin": "13.240",
+   "children": [],
+   "end": "13.520",
+   "id": "f000068",
+   "language": "zh",
+   "lines": [
+    "\u53f0"
+   ]
+  },
+  {
+   "begin": "13.520",
+   "children": [],
+   "end": "13.760",
+   "id": "f000069",
+   "language": "zh",
+   "lines": [
+    "\u4e8e"
+   ]
+  },
+  {
+   "begin": "13.760",
+   "children": [],
+   "end": "14.000",
+   "id": "f000070",
+   "language": "zh",
+   "lines": [
+    "\u65b0"
+   ]
+  },
+  {
+   "begin": "14.000",
+   "children": [],
+   "end": "14.160",
+   "id": "f000071",
+   "language": "zh",
+   "lines": [
+    "\u534e"
+   ]
+  },
+  {
+   "begin": "14.160",
+   "children": [],
+   "end": "14.400",
+   "id": "f000072",
+   "language": "zh",
+   "lines": [
+    "\u793e"
+   ]
+  },
+  {
+   "begin": "14.400",
+   "children": [],
+   "end": "14.560",
+   "id": "f000073",
+   "language": "zh",
+   "lines": [
+    "\u65b0"
+   ]
+  },
+  {
+   "begin": "14.560",
+   "children": [],
+   "end": "14.680",
+   "id": "f000074",
+   "language": "zh",
+   "lines": [
+    "\u5a92"
+   ]
+  },
+  {
+   "begin": "14.680",
+   "children": [],
+   "end": "14.800",
+   "id": "f000075",
+   "language": "zh",
+   "lines": [
+    "\u4f53"
+   ]
+  },
+  {
+   "begin": "14.800",
+   "children": [],
+   "end": "15.000",
+   "id": "f000076",
+   "language": "zh",
+   "lines": [
+    "\u4e2d"
+   ]
+  },
+  {
+   "begin": "15.000",
+   "children": [],
+   "end": "15.400",
+   "id": "f000077",
+   "language": "zh",
+   "lines": [
+    "\u5fc3"
+   ]
+  },
+  {
+   "begin": "15.400",
+   "children": [],
+   "end": "15.560",
+   "id": "f000078",
+   "language": "zh",
+   "lines": [
+    "\u65b0"
+   ]
+  },
+  {
+   "begin": "15.560",
+   "children": [],
+   "end": "15.720",
+   "id": "f000079",
+   "language": "zh",
+   "lines": [
+    "\u95fb"
+   ]
+  },
+  {
+   "begin": "15.720",
+   "children": [],
+   "end": "15.840",
+   "id": "f000080",
+   "language": "zh",
+   "lines": [
+    "\u4e3b"
+   ]
+  },
+  {
+   "begin": "15.840",
+   "children": [],
+   "end": "16.000",
+   "id": "f000081",
+   "language": "zh",
+   "lines": [
+    "\u64ad"
+   ]
+  },
+  {
+   "begin": "16.000",
+   "children": [],
+   "end": "16.200",
+   "id": "f000082",
+   "language": "zh",
+   "lines": [
+    "\u533a"
+   ]
+  },
+  {
+   "begin": "16.200",
+   "children": [],
+   "end": "16.200",
+   "id": "f000083",
+   "language": "zh",
+   "lines": [
+    "\u3002"
+   ]
+  },
+  {
+   "begin": "16.200",
    "children": [],
    "end": "16.960",
-   "id": "f000004",
+   "id": "f000084",
    "language": "zh",
    "lines": [
-    "\u5367\u7684\u58f0\u97f3\u548c\u5916\u884c\u8feb\u53f0\u4e8e\u65b0\u534e\u793e\u65b0\u5a92\u4f53\u4e2d\u5fc3\u65b0\u95fb\u4e3b\u64ad\u533a\u5fd9"
+    "\u5fd9"
    ]
   },
   {
    "begin": "16.960",
    "children": [],
-   "end": "20.600",
-   "id": "f000005",
+   "end": "17.080",
+   "id": "f000085",
    "language": "zh",
    "lines": [
-    "\u6c83\u5c06\u4f1a\u5728\u4eca\u5e74\u5168\u56fd\u4e24\u4f1a\u671f\u95f4\u4e0e\u5927\u5bb6\u89c1\u9762\u6211\u548c"
+    "\u6c83"
    ]
   },
   {
-   "begin": "20.600",
+   "begin": "17.080",
    "children": [],
-   "end": "30.280",
-   "id": "f000006",
+   "end": "17.280",
+   "id": "f000086",
    "language": "zh",
    "lines": [
-    "\u6211\u7684\u642d\u6863\u5c06\u672a\u5927\u5bb6\u5e26\u6765\u66f4\u597d\u7684\u65b0\u95fb\u4f53\u9a8c"
+    "\u5c06"
+   ]
+  },
+  {
+   "begin": "17.280",
+   "children": [],
+   "end": "17.400",
+   "id": "f000087",
+   "language": "zh",
+   "lines": [
+    "\u4f1a"
+   ]
+  },
+  {
+   "begin": "17.400",
+   "children": [],
+   "end": "17.640",
+   "id": "f000088",
+   "language": "zh",
+   "lines": [
+    "\u5728"
+   ]
+  },
+  {
+   "begin": "17.640",
+   "children": [],
+   "end": "17.800",
+   "id": "f000089",
+   "language": "zh",
+   "lines": [
+    "\u4eca"
+   ]
+  },
+  {
+   "begin": "17.800",
+   "children": [],
+   "end": "17.920",
+   "id": "f000090",
+   "language": "zh",
+   "lines": [
+    "\u5e74"
+   ]
+  },
+  {
+   "begin": "17.920",
+   "children": [],
+   "end": "18.120",
+   "id": "f000091",
+   "language": "zh",
+   "lines": [
+    "\u5168"
+   ]
+  },
+  {
+   "begin": "18.120",
+   "children": [],
+   "end": "18.200",
+   "id": "f000092",
+   "language": "zh",
+   "lines": [
+    "\u56fd"
+   ]
+  },
+  {
+   "begin": "18.200",
+   "children": [],
+   "end": "18.440",
+   "id": "f000093",
+   "language": "zh",
+   "lines": [
+    "\u4e24"
+   ]
+  },
+  {
+   "begin": "18.440",
+   "children": [],
+   "end": "18.600",
+   "id": "f000094",
+   "language": "zh",
+   "lines": [
+    "\u4f1a"
+   ]
+  },
+  {
+   "begin": "18.600",
+   "children": [],
+   "end": "18.760",
+   "id": "f000095",
+   "language": "zh",
+   "lines": [
+    "\u671f"
+   ]
+  },
+  {
+   "begin": "18.760",
+   "children": [],
+   "end": "19.200",
+   "id": "f000096",
+   "language": "zh",
+   "lines": [
+    "\u95f4"
+   ]
+  },
+  {
+   "begin": "19.200",
+   "children": [],
+   "end": "19.320",
+   "id": "f000097",
+   "language": "zh",
+   "lines": [
+    "\u4e0e"
+   ]
+  },
+  {
+   "begin": "19.320",
+   "children": [],
+   "end": "19.480",
+   "id": "f000098",
+   "language": "zh",
+   "lines": [
+    "\u5927"
+   ]
+  },
+  {
+   "begin": "19.480",
+   "children": [],
+   "end": "19.720",
+   "id": "f000099",
+   "language": "zh",
+   "lines": [
+    "\u5bb6"
+   ]
+  },
+  {
+   "begin": "19.720",
+   "children": [],
+   "end": "19.880",
+   "id": "f000100",
+   "language": "zh",
+   "lines": [
+    "\u89c1"
+   ]
+  },
+  {
+   "begin": "19.880",
+   "children": [],
+   "end": "20.120",
+   "id": "f000101",
+   "language": "zh",
+   "lines": [
+    "\u9762"
+   ]
+  },
+  {
+   "begin": "20.120",
+   "children": [],
+   "end": "20.120",
+   "id": "f000102",
+   "language": "zh",
+   "lines": [
+    "\uff0c"
+   ]
+  },
+  {
+   "begin": "20.120",
+   "children": [],
+   "end": "20.720",
+   "id": "f000103",
+   "language": "zh",
+   "lines": [
+    "\u6211"
+   ]
+  },
+  {
+   "begin": "20.720",
+   "children": [],
+   "end": "21.040",
+   "id": "f000104",
+   "language": "zh",
+   "lines": [
+    "\u548c"
+   ]
+  },
+  {
+   "begin": "21.040",
+   "children": [],
+   "end": "21.240",
+   "id": "f000105",
+   "language": "zh",
+   "lines": [
+    "\u6211"
+   ]
+  },
+  {
+   "begin": "21.240",
+   "children": [],
+   "end": "21.240",
+   "id": "f000106",
+   "language": "zh",
+   "lines": [
+    "\u7684"
+   ]
+  },
+  {
+   "begin": "21.240",
+   "children": [],
+   "end": "21.480",
+   "id": "f000107",
+   "language": "zh",
+   "lines": [
+    "\u642d"
+   ]
+  },
+  {
+   "begin": "21.480",
+   "children": [],
+   "end": "21.480",
+   "id": "f000108",
+   "language": "zh",
+   "lines": [
+    "\u6863"
+   ]
+  },
+  {
+   "begin": "21.480",
+   "children": [],
+   "end": "21.480",
+   "id": "f000109",
+   "language": "zh",
+   "lines": [
+    "\uff0c"
+   ]
+  },
+  {
+   "begin": "21.480",
+   "children": [],
+   "end": "21.720",
+   "id": "f000110",
+   "language": "zh",
+   "lines": [
+    "\u5c06"
+   ]
+  },
+  {
+   "begin": "21.720",
+   "children": [],
+   "end": "21.880",
+   "id": "f000111",
+   "language": "zh",
+   "lines": [
+    "\u672a"
+   ]
+  },
+  {
+   "begin": "21.880",
+   "children": [],
+   "end": "22.080",
+   "id": "f000112",
+   "language": "zh",
+   "lines": [
+    "\u5927"
+   ]
+  },
+  {
+   "begin": "22.080",
+   "children": [],
+   "end": "22.200",
+   "id": "f000113",
+   "language": "zh",
+   "lines": [
+    "\u5bb6"
+   ]
+  },
+  {
+   "begin": "22.200",
+   "children": [],
+   "end": "22.200",
+   "id": "f000114",
+   "language": "zh",
+   "lines": [
+    "\u5e26"
+   ]
+  },
+  {
+   "begin": "22.200",
+   "children": [],
+   "end": "22.640",
+   "id": "f000115",
+   "language": "zh",
+   "lines": [
+    "\u6765"
+   ]
+  },
+  {
+   "begin": "22.640",
+   "children": [],
+   "end": "22.800",
+   "id": "f000116",
+   "language": "zh",
+   "lines": [
+    "\u66f4"
+   ]
+  },
+  {
+   "begin": "22.800",
+   "children": [],
+   "end": "23.000",
+   "id": "f000117",
+   "language": "zh",
+   "lines": [
+    "\u597d"
+   ]
+  },
+  {
+   "begin": "23.000",
+   "children": [],
+   "end": "23.080",
+   "id": "f000118",
+   "language": "zh",
+   "lines": [
+    "\u7684"
+   ]
+  },
+  {
+   "begin": "23.080",
+   "children": [],
+   "end": "23.280",
+   "id": "f000119",
+   "language": "zh",
+   "lines": [
+    "\u65b0"
+   ]
+  },
+  {
+   "begin": "23.280",
+   "children": [],
+   "end": "23.400",
+   "id": "f000120",
+   "language": "zh",
+   "lines": [
+    "\u95fb"
+   ]
+  },
+  {
+   "begin": "23.400",
+   "children": [],
+   "end": "23.600",
+   "id": "f000121",
+   "language": "zh",
+   "lines": [
+    "\u4f53"
+   ]
+  },
+  {
+   "begin": "23.600",
+   "children": [],
+   "end": "23.880",
+   "id": "f000122",
+   "language": "zh",
+   "lines": [
+    "\u9a8c"
+   ]
+  },
+  {
+   "begin": "23.880",
+   "children": [],
+   "end": "30.280",
+   "id": "f000123",
+   "language": "zh",
+   "lines": [
+    "\u3002"
    ]
   }
  ]
