--- a/deepdub_frontend/echo/package.json
+++ b/deepdub_frontend/echo/package.json
@@ -12,11 +12,14 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "jquery": "^3.6.0",
     "notistack": "^2.0.3",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-record-webcam": "^0.0.14",
     "react-scripts": "5.0.0",
+    "react-youtube": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
