--- a/deepdub_frontend/echo/package.json
+++ b/deepdub_frontend/echo/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
@@ -17,23 +18,17 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
-<<<<<<< HEAD
+    "gsap": "^3.10.4",
     "jquery": "^3.6.0",
-    "notistack": "^2.0.3",
-    "popper.js": "^1.16.1",
-=======
     "notistack": "^2.0.4",
->>>>>>> 1c3dc823a9bb697a330beea298ddc324b0ec0760
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-record-webcam": "^0.0.14",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-<<<<<<< HEAD
     "react-youtube": "^9.0.1",
-=======
     "styled-components": "^5.3.5",
->>>>>>> 1c3dc823a9bb697a330beea298ddc324b0ec0760
     "web-vitals": "^2.1.4"
   },
   "scripts": {
