--- a/deepdub_cli/metadata/aeneas_aligned_output.json
+++ b/deepdub_cli/metadata/aeneas_aligned_output.json
@@ -3,141 +3,851 @@
   {
    "begin": "0.000",
    "children": [],
-   "end": "0.000",
+   "end": "0.360",
    "id": "f000001",
-   "language": "tr",
+   "language": "de",
    "lines": [
-    "sana"
+    "sehr"
    ]
   },
   {
-   "begin": "0.000",
+   "begin": "0.360",
    "children": [],
-   "end": "0.000",
+   "end": "0.920",
    "id": "f000002",
-   "language": "tr",
+   "language": "de",
    "lines": [
-    "buydunu"
+    "geehrter"
    ]
   },
   {
-   "begin": "0.000",
+   "begin": "0.920",
    "children": [],
-   "end": "9.280",
+   "end": "1.040",
    "id": "f000003",
-   "language": "tr",
+   "language": "de",
    "lines": [
-    "tekrarlatmadem\u0131\u015ftiburan\u0131n"
+    "herr"
    ]
   },
   {
-   "begin": "9.280",
+   "begin": "1.040",
    "children": [],
-   "end": "10.320",
+   "end": "1.880",
    "id": "f000004",
-   "language": "tr",
+   "language": "de",
    "lines": [
-    "ur\u00e7"
+    "generaldirektor"
    ]
   },
   {
-   "begin": "10.320",
+   "begin": "1.880",
    "children": [],
-   "end": "12.680",
+   "end": "2.680",
    "id": "f000005",
-   "language": "tr",
+   "language": "de",
    "lines": [
-    "berye"
+    "tedros"
    ]
   },
   {
-   "begin": "12.680",
+   "begin": "2.680",
    "children": [],
-   "end": "13.320",
+   "end": "3.640",
    "id": "f000006",
-   "language": "tr",
+   "language": "de",
    "lines": [
-    "benmmburada"
+    "exzellenzen"
    ]
   },
   {
-   "begin": "13.320",
+   "begin": "3.640",
    "children": [],
-   "end": "14.000",
+   "end": "3.880",
    "id": "f000007",
-   "language": "tr",
+   "language": "de",
    "lines": [
-    "mizanla"
+    "sehr"
    ]
   },
   {
-   "begin": "14.000",
+   "begin": "3.880",
    "children": [],
-   "end": "14.840",
+   "end": "4.160",
    "id": "f000008",
-   "language": "tr",
+   "language": "de",
    "lines": [
-    "r"
+    "geehrte"
    ]
   },
   {
-   "begin": "14.840",
+   "begin": "4.160",
    "children": [],
-   "end": "15.800",
+   "end": "4.520",
    "id": "f000009",
-   "language": "tr",
+   "language": "de",
    "lines": [
-    "alim"
+    "damen"
    ]
   },
   {
-   "begin": "15.800",
+   "begin": "4.520",
    "children": [],
-   "end": "20.880",
+   "end": "4.600",
    "id": "f000010",
-   "language": "tr",
+   "language": "de",
    "lines": [
-    "donacen"
+    "und"
    ]
   },
   {
-   "begin": "20.880",
+   "begin": "4.600",
    "children": [],
-   "end": "21.080",
+   "end": "5.320",
    "id": "f000011",
-   "language": "tr",
+   "language": "de",
    "lines": [
-    "ay\u0131ve"
+    "herren"
    ]
   },
   {
-   "begin": "21.080",
+   "begin": "5.320",
    "children": [],
-   "end": "23.160",
+   "end": "5.680",
    "id": "f000012",
-   "language": "tr",
+   "language": "de",
    "lines": [
-    "bolakayrardlerine"
+    "wir"
    ]
   },
   {
-   "begin": "23.160",
+   "begin": "5.680",
    "children": [],
-   "end": "25.520",
+   "end": "6.120",
    "id": "f000013",
-   "language": "tr",
+   "language": "de",
    "lines": [
-    "tne"
+    "erleben"
    ]
   },
   {
-   "begin": "25.520",
+   "begin": "6.120",
    "children": [],
-   "end": "28.920",
+   "end": "6.440",
    "id": "f000014",
-   "language": "tr",
+   "language": "de",
    "lines": [
-    "zinanad\u0131"
+    "eine"
+   ]
+  },
+  {
+   "begin": "6.440",
+   "children": [],
+   "end": "6.920",
+   "id": "f000015",
+   "language": "de",
+   "lines": [
+    "globale"
+   ]
+  },
+  {
+   "begin": "6.920",
+   "children": [],
+   "end": "7.800",
+   "id": "f000016",
+   "language": "de",
+   "lines": [
+    "krise"
+   ]
+  },
+  {
+   "begin": "7.800",
+   "children": [],
+   "end": "8.040",
+   "id": "f000017",
+   "language": "de",
+   "lines": [
+    "fast"
+   ]
+  },
+  {
+   "begin": "8.040",
+   "children": [],
+   "end": "8.320",
+   "id": "f000018",
+   "language": "de",
+   "lines": [
+    "f\u00fcnf"
+   ]
+  },
+  {
+   "begin": "8.320",
+   "children": [],
+   "end": "8.680",
+   "id": "f000019",
+   "language": "de",
+   "lines": [
+    "millionen"
+   ]
+  },
+  {
+   "begin": "8.680",
+   "children": [],
+   "end": "9.080",
+   "id": "f000020",
+   "language": "de",
+   "lines": [
+    "menschen"
+   ]
+  },
+  {
+   "begin": "9.080",
+   "children": [],
+   "end": "10.240",
+   "id": "f000021",
+   "language": "de",
+   "lines": [
+    "weltweit"
+   ]
+  },
+  {
+   "begin": "10.240",
+   "children": [],
+   "end": "10.400",
+   "id": "f000022",
+   "language": "de",
+   "lines": [
+    "die"
+   ]
+  },
+  {
+   "begin": "10.400",
+   "children": [],
+   "end": "10.800",
+   "id": "f000023",
+   "language": "de",
+   "lines": [
+    "sich"
+   ]
+  },
+  {
+   "begin": "10.800",
+   "children": [],
+   "end": "11.080",
+   "id": "f000024",
+   "language": "de",
+   "lines": [
+    "stand"
+   ]
+  },
+  {
+   "begin": "11.080",
+   "children": [],
+   "end": "11.720",
+   "id": "f000025",
+   "language": "de",
+   "lines": [
+    "heute"
+   ]
+  },
+  {
+   "begin": "11.720",
+   "children": [],
+   "end": "11.880",
+   "id": "f000026",
+   "language": "de",
+   "lines": [
+    "mit"
+   ]
+  },
+  {
+   "begin": "11.880",
+   "children": [],
+   "end": "12.040",
+   "id": "f000027",
+   "language": "de",
+   "lines": [
+    "dem"
+   ]
+  },
+  {
+   "begin": "12.040",
+   "children": [],
+   "end": "13.000",
+   "id": "f000028",
+   "language": "de",
+   "lines": [
+    "kronavirus"
+   ]
+  },
+  {
+   "begin": "13.000",
+   "children": [],
+   "end": "13.360",
+   "id": "f000029",
+   "language": "de",
+   "lines": [
+    "infiziert"
+   ]
+  },
+  {
+   "begin": "13.360",
+   "children": [],
+   "end": "13.680",
+   "id": "f000030",
+   "language": "de",
+   "lines": [
+    "haben"
+   ]
+  },
+  {
+   "begin": "13.680",
+   "children": [],
+   "end": "14.320",
+   "id": "f000031",
+   "language": "de",
+   "lines": [
+    "und"
+   ]
+  },
+  {
+   "begin": "14.320",
+   "children": [],
+   "end": "15.000",
+   "id": "f000032",
+   "language": "de",
+   "lines": [
+    "ebenfalls"
+   ]
+  },
+  {
+   "begin": "15.000",
+   "children": [],
+   "end": "15.920",
+   "id": "f000033",
+   "language": "de",
+   "lines": [
+    "standheute"
+   ]
+  },
+  {
+   "begin": "15.920",
+   "children": [],
+   "end": "16.160",
+   "id": "f000034",
+   "language": "de",
+   "lines": [
+    "rund"
+   ]
+  },
+  {
+   "begin": "16.160",
+   "children": [],
+   "end": "17.760",
+   "id": "f000035",
+   "language": "de",
+   "lines": [
+    "dreihunderttausend-todesf\u00e4lle"
+   ]
+  },
+  {
+   "begin": "17.760",
+   "children": [],
+   "end": "18.920",
+   "id": "f000036",
+   "language": "de",
+   "lines": [
+    "weltweit"
+   ]
+  },
+  {
+   "begin": "18.920",
+   "children": [],
+   "end": "19.360",
+   "id": "f000037",
+   "language": "de",
+   "lines": [
+    "ausserdem"
+   ]
+  },
+  {
+   "begin": "19.360",
+   "children": [],
+   "end": "19.880",
+   "id": "f000038",
+   "language": "de",
+   "lines": [
+    "geschlossene"
+   ]
+  },
+  {
+   "begin": "19.880",
+   "children": [],
+   "end": "20.440",
+   "id": "f000039",
+   "language": "de",
+   "lines": [
+    "grenzen"
+   ]
+  },
+  {
+   "begin": "20.440",
+   "children": [],
+   "end": "20.600",
+   "id": "f000040",
+   "language": "de",
+   "lines": [
+    "und"
+   ]
+  },
+  {
+   "begin": "20.600",
+   "children": [],
+   "end": "21.240",
+   "id": "f000041",
+   "language": "de",
+   "lines": [
+    "herbe-einschnitte"
+   ]
+  },
+  {
+   "begin": "21.240",
+   "children": [],
+   "end": "21.400",
+   "id": "f000042",
+   "language": "de",
+   "lines": [
+    "im"
+   ]
+  },
+  {
+   "begin": "21.400",
+   "children": [],
+   "end": "22.000",
+   "id": "f000043",
+   "language": "de",
+   "lines": [
+    "wirtschafts-"
+   ]
+  },
+  {
+   "begin": "22.000",
+   "children": [],
+   "end": "22.280",
+   "id": "f000044",
+   "language": "de",
+   "lines": [
+    "und"
+   ]
+  },
+  {
+   "begin": "22.280",
+   "children": [],
+   "end": "23.040",
+   "id": "f000045",
+   "language": "de",
+   "lines": [
+    "alltagsleben"
+   ]
+  },
+  {
+   "begin": "23.040",
+   "children": [],
+   "end": "24.080",
+   "id": "f000046",
+   "language": "de",
+   "lines": [
+    "zeigen"
+   ]
+  },
+  {
+   "begin": "24.080",
+   "children": [],
+   "end": "24.280",
+   "id": "f000047",
+   "language": "de",
+   "lines": [
+    "dass"
+   ]
+  },
+  {
+   "begin": "24.280",
+   "children": [],
+   "end": "24.600",
+   "id": "f000048",
+   "language": "de",
+   "lines": [
+    "kaum"
+   ]
+  },
+  {
+   "begin": "24.600",
+   "children": [],
+   "end": "24.800",
+   "id": "f000049",
+   "language": "de",
+   "lines": [
+    "ein"
+   ]
+  },
+  {
+   "begin": "24.800",
+   "children": [],
+   "end": "25.080",
+   "id": "f000050",
+   "language": "de",
+   "lines": [
+    "land"
+   ]
+  },
+  {
+   "begin": "25.080",
+   "children": [],
+   "end": "25.280",
+   "id": "f000051",
+   "language": "de",
+   "lines": [
+    "von"
+   ]
+  },
+  {
+   "begin": "25.280",
+   "children": [],
+   "end": "25.440",
+   "id": "f000052",
+   "language": "de",
+   "lines": [
+    "der"
+   ]
+  },
+  {
+   "begin": "25.440",
+   "children": [],
+   "end": "26.040",
+   "id": "f000053",
+   "language": "de",
+   "lines": [
+    "pandemie"
+   ]
+  },
+  {
+   "begin": "26.040",
+   "children": [],
+   "end": "26.200",
+   "id": "f000054",
+   "language": "de",
+   "lines": [
+    "und"
+   ]
+  },
+  {
+   "begin": "26.200",
+   "children": [],
+   "end": "26.480",
+   "id": "f000055",
+   "language": "de",
+   "lines": [
+    "ihren"
+   ]
+  },
+  {
+   "begin": "26.480",
+   "children": [],
+   "end": "26.880",
+   "id": "f000056",
+   "language": "de",
+   "lines": [
+    "folgen"
+   ]
+  },
+  {
+   "begin": "26.880",
+   "children": [],
+   "end": "27.360",
+   "id": "f000057",
+   "language": "de",
+   "lines": [
+    "verschont"
+   ]
+  },
+  {
+   "begin": "27.360",
+   "children": [],
+   "end": "29.040",
+   "id": "f000058",
+   "language": "de",
+   "lines": [
+    "bleibtdiese"
+   ]
+  },
+  {
+   "begin": "29.040",
+   "children": [],
+   "end": "29.440",
+   "id": "f000059",
+   "language": "de",
+   "lines": [
+    "krise"
+   ]
+  },
+  {
+   "begin": "29.440",
+   "children": [],
+   "end": "29.680",
+   "id": "f000060",
+   "language": "de",
+   "lines": [
+    "kann"
+   ]
+  },
+  {
+   "begin": "29.680",
+   "children": [],
+   "end": "29.960",
+   "id": "f000061",
+   "language": "de",
+   "lines": [
+    "kein"
+   ]
+  },
+  {
+   "begin": "29.960",
+   "children": [],
+   "end": "30.200",
+   "id": "f000062",
+   "language": "de",
+   "lines": [
+    "land"
+   ]
+  },
+  {
+   "begin": "30.200",
+   "children": [],
+   "end": "30.960",
+   "id": "f000063",
+   "language": "de",
+   "lines": [
+    "alleinl\u00f6sen"
+   ]
+  },
+  {
+   "begin": "30.960",
+   "children": [],
+   "end": "31.360",
+   "id": "f000064",
+   "language": "de",
+   "lines": [
+    "wir"
+   ]
+  },
+  {
+   "begin": "31.360",
+   "children": [],
+   "end": "31.680",
+   "id": "f000065",
+   "language": "de",
+   "lines": [
+    "m\u00fcssen"
+   ]
+  },
+  {
+   "begin": "31.680",
+   "children": [],
+   "end": "32.200",
+   "id": "f000066",
+   "language": "de",
+   "lines": [
+    "gemeinsam"
+   ]
+  },
+  {
+   "begin": "32.200",
+   "children": [],
+   "end": "33.200",
+   "id": "f000067",
+   "language": "de",
+   "lines": [
+    "handeln"
+   ]
+  },
+  {
+   "begin": "33.200",
+   "children": [],
+   "end": "33.520",
+   "id": "f000068",
+   "language": "de",
+   "lines": [
+    "daher"
+   ]
+  },
+  {
+   "begin": "33.520",
+   "children": [],
+   "end": "33.920",
+   "id": "f000069",
+   "language": "de",
+   "lines": [
+    "danke"
+   ]
+  },
+  {
+   "begin": "33.920",
+   "children": [],
+   "end": "34.080",
+   "id": "f000070",
+   "language": "de",
+   "lines": [
+    "ich"
+   ]
+  },
+  {
+   "begin": "34.080",
+   "children": [],
+   "end": "34.280",
+   "id": "f000071",
+   "language": "de",
+   "lines": [
+    "ihnen"
+   ]
+  },
+  {
+   "begin": "34.280",
+   "children": [],
+   "end": "34.840",
+   "id": "f000072",
+   "language": "de",
+   "lines": [
+    "allen"
+   ]
+  },
+  {
+   "begin": "34.840",
+   "children": [],
+   "end": "34.960",
+   "id": "f000073",
+   "language": "de",
+   "lines": [
+    "die"
+   ]
+  },
+  {
+   "begin": "34.960",
+   "children": [],
+   "end": "35.240",
+   "id": "f000074",
+   "language": "de",
+   "lines": [
+    "sie"
+   ]
+  },
+  {
+   "begin": "35.240",
+   "children": [],
+   "end": "35.320",
+   "id": "f000075",
+   "language": "de",
+   "lines": [
+    "an"
+   ]
+  },
+  {
+   "begin": "35.320",
+   "children": [],
+   "end": "35.600",
+   "id": "f000076",
+   "language": "de",
+   "lines": [
+    "der"
+   ]
+  },
+  {
+   "begin": "35.600",
+   "children": [],
+   "end": "35.920",
+   "id": "f000077",
+   "language": "de",
+   "lines": [
+    "welt"
+   ]
+  },
+  {
+   "begin": "35.920",
+   "children": [],
+   "end": "36.680",
+   "id": "f000078",
+   "language": "de",
+   "lines": [
+    "gesundheitsversammlung"
+   ]
+  },
+  {
+   "begin": "36.680",
+   "children": [],
+   "end": "37.840",
+   "id": "f000079",
+   "language": "de",
+   "lines": [
+    "teilnehmen"
+   ]
+  },
+  {
+   "begin": "37.840",
+   "children": [],
+   "end": "37.960",
+   "id": "f000080",
+   "language": "de",
+   "lines": [
+    "um"
+   ]
+  },
+  {
+   "begin": "37.960",
+   "children": [],
+   "end": "38.640",
+   "id": "f000081",
+   "language": "de",
+   "lines": [
+    "gemeinsam"
+   ]
+  },
+  {
+   "begin": "38.640",
+   "children": [],
+   "end": "38.840",
+   "id": "f000082",
+   "language": "de",
+   "lines": [
+    "nach"
+   ]
+  },
+  {
+   "begin": "38.840",
+   "children": [],
+   "end": "39.320",
+   "id": "f000083",
+   "language": "de",
+   "lines": [
+    "l\u00f6sungen"
+   ]
+  },
+  {
+   "begin": "39.320",
+   "children": [],
+   "end": "39.680",
+   "id": "f000084",
+   "language": "de",
+   "lines": [
+    "zu"
+   ]
+  },
+  {
+   "begin": "39.680",
+   "children": [],
+   "end": "40.000",
+   "id": "f000085",
+   "language": "de",
+   "lines": [
+    "suchen"
    ]
   }
  ]
