--- a/deepdub_frontend/echo/package.json
+++ b/deepdub_frontend/echo/package.json
@@ -20,10 +20,12 @@
     "axios": "^0.25.0",
     "gsap": "^3.10.4",
     "jquery": "^3.6.0",
+    "materialize-css": "^1.0.0-rc.2",
     "notistack": "^2.0.4",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-materialize": "^3.10.0",
     "react-record-webcam": "^0.0.14",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
